--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "convex": "^1.31.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
@@ -35,6 +36,7 @@
     "react-hook-form": "^7.69.0",
     "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.2.1"
   },
   "devDependencies": {
