--- a/_bmad-output/planning-artifacts/bmm-workflow-status.yaml
+++ b/_bmad-output/planning-artifacts/bmm-workflow-status.yaml
@@ -16,11 +16,14 @@
 #   - skipped: Optional/conditional workflow that was skipped
 
 generated: "2026-01-22"
+updated: "2026-01-22"
 project: "la-mouliniere"
 project_type: "web_app"
 selected_track: "method"
 field_type: "brownfield"
 workflow_path: "{project-root}/_bmad/bmm/workflows/workflow-status/paths/method-brownfield.yaml"
+status: "completed"
+completion_date: "2026-01-22"
 
 workflow_status:
   # Phase 0 - Documentation (conditional if_undocumented)
@@ -43,3 +46,15 @@ workflow_status:
 
   # Phase 4 - Implementation
   sprint-planning: "implementation-artifacts/sprint-status.yaml"
+
+# Completion Summary
+completion_summary:
+  total_workflows: 10
+  completed: 5
+  skipped: 5
+  artifacts_generated:
+    - "planning-artifacts/research/technical-hardening-mvp-research-2026-01-22.md"
+    - "docs/PRD-012-hardening-mvp-v1_0.md"
+    - "implementation-artifacts/epic-1-hardening-mvp.md"
+    - "implementation-artifacts/sprint-status.yaml"
+  outcome: "Sprint Hardening MVP terminé - Projet production-ready"
