--- a/public/admin-tablette-manifest.json
+++ b/public/admin-tablette-manifest.json
@@ -10,16 +10,28 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/admin-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/admin-icon-maskable-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/admin-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/admin-icon-maskable-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "categories": ["business", "productivity"],
@@ -32,13 +44,13 @@
       "name": "Planning",
       "short_name": "Planning",
       "url": "/admin-tablette",
-      "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/admin-icon-192.png", "sizes": "192x192" }]
     },
     {
       "name": "Réservations",
       "short_name": "Résa",
       "url": "/admin-tablette/reservations",
-      "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/admin-icon-192.png", "sizes": "192x192" }]
     }
   ]
 }
